- Fix css on small-screen

--- a/src/app/features/details/details.component.scss
+++ b/src/app/features/details/details.component.scss
@@ -154,12 +154,16 @@
         @include small-screen {
           flex-direction: column;
           align-items: center;
-          width: 95%;
+          width: 100%;
           margin-top: 10px;
         }
 
         .organizer-container {
           padding: 25px;
+
+          @include small-screen {
+            padding: 10px;
+          }
 
           .organizer-inner-container {
             display: flex;
@@ -214,7 +218,7 @@
 
         @include small-screen {
           flex-direction: column;
-          width: 95%;
+          width: 100%;
           margin-top: 10px;
         }
 
@@ -224,6 +228,10 @@
           padding: 25px;
           background-color: white;
           align-self: flex-start;
+
+          @include small-screen {
+            padding: 10px;
+          }
 
           img {
             max-width: 100%;
@@ -239,6 +247,7 @@
           @include small-screen {
             margin-left: 0;
             margin-top: 10px;
+            padding: 10px;
           }
 
           .description-block {
@@ -266,7 +275,7 @@
 
         @include small-screen {
           flex-direction: column;
-          width: 95%;
+          width: 100%;
           margin-top: 10px;
         }
 
@@ -288,6 +297,10 @@
             border: 1px solid rgba(0, 0, 0, 0.25);
             padding: 25px;
             background-color: white;
+
+            @include small-screen {
+              padding: 10px;
+            }
 
             .document {
               display: flex;
@@ -354,6 +367,7 @@
 
           @include small-screen {
             margin-right: 0;
+            padding: 10px;
           }
 
           .description-block {
@@ -452,12 +466,16 @@
         background-color: white;
 
         @include small-screen {
-          width: 95%;
+          width: 100%;
           margin-top: 10px;
         }
 
         .gallery-inner-container {
           padding: 25px;
+
+          @include small-screen {
+            padding: 10px;
+          }
 
           app-gallery {
           }
@@ -480,12 +498,16 @@
         background-color: white;
 
         @include small-screen {
-          width: 95%;
+          width: 100%;
           margin-top: 10px;
         }
 
         .registrations-grid-inner-container {
           padding: 25px;
+
+          @include small-screen {
+           padding: 10px;
+          }
         }
       }
     }
