--- a/src/app/features/home/components/footcamps-list-overview/footcamps-list-overview.component.scss
+++ b/src/app/features/home/components/footcamps-list-overview/footcamps-list-overview.component.scss
@@ -35,6 +35,7 @@
         flex-wrap: wrap;
 
         @include small-screen {
+          width: 100%;
           justify-content: center;
         }
 
